--- a/praktik1/index.html
+++ b/praktik1/index.html
@@ -9,7 +9,7 @@
 <body>
     <script src="app.js"></script>
     <div class='calculator' id='calc'>
-        <div class='toggle'>
+        <div class='toggle'> PRAKTIK1---NSNAKOS
           <div class='theme-switch-wrapper'>
             <label class='theme-switch' for='checkbox'>
               <input id='checkbox' type='checkbox'>
