--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -36,7 +36,7 @@
         <div>
             <button>0</button>
             <button>00</button>
-            <button>,</button>
+            <button class="asss">.</button>
             <button class="yellow">=</button>
         </div>
     </div>
